--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,31 @@ body{
     grid-template-columns: 10fr;
     grid-row: 10px 480px 10px;
 }
+
+#gameBoard .card{
+    z-index: 10;
+    transition: margin 1s ease-in-out;
+    background-image: url("../card_images/blue_back.jpg");
+    background-size: 80px 100px; 
+    background-repeat: no-repeat;   
+    height:100px ;
+    width:80px ;
+    border-radius: 6px;
+    margin-top:;
+    position: absolute;  
+    transition: 2s ease-in-out;
+
+}
+
+
+
+
 #column7{
     grid-column: 8/9;
     grid-row: 2/3;
     display: flex;
+    transition: 1s ease-in-out;
+    margin-top: 100px;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -50,7 +71,9 @@ body{
 #column6{
     grid-column: 7/8;
     grid-row: 2/3;
+    transition: 1s ease-in-out;
     display: flex;
+    margin-top: 100px;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -72,6 +95,8 @@ body{
 #column5{
     grid-column: 6/7;
     grid-row: 2/3;
+    transition: 1s ease-in-out;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -87,13 +112,16 @@ body{
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
+    transition: 1s ease-in-out;
     width:80px ;
     border-radius: 6px;
     position: relative; to .content;
 }
 #column4{
     grid-column: 5/6;
+    margin-top: 100px;
     grid-row: 2/3;
+    transition: 1s ease-in-out;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,7 +145,8 @@ body{
     grid-column: 4/5;
     grid-row: 2/3;
     display: flex;
-    
+    margin-top: 100px;
+    transition: 1s ease-in-out;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -140,6 +169,8 @@ body{
     grid-column: 3/4;
     grid-row: 2/3;
     display: flex;
+    margin-top: 100px;
+    transition: 1s ease-in-out;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -161,7 +192,9 @@ body{
 #column1{
     grid-column: 2/3;
     grid-row: 2/3;
+    transition: 1s ease-in-out;
     display: flex;
+    margin-top: 100px;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -179,7 +212,7 @@ body{
     width:80px ;
     border-radius: 6px;
     
-    position: relative; to .content;
+    position: relative;
 }
 
 .card:hover{
