--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,18 @@ body{
     grid-column: 2/3;
     padding: 20px;
     border-radius: 20px;
-    background-color: green;
+    background-image: url('../boardbg.jpg');
+    /* background-color: green; */
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94); 
     box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94);
     border: 1px solid white;
     display: grid;
     grid-template-columns: 10fr;
+    
     grid-row: 10px 480px 10px;
 }
+
+
 
 #gameBoard .card{
     z-index: 10;
@@ -40,6 +44,22 @@ body{
     transition: 2s ease-in-out;
 
 }
+#play-btn{
+    height: 50px;
+    width: 100px;
+    border-radius: 7px;
+    color: white;
+    font-size: 25px;
+    margin:100px 0 0 400px ;
+    position: absolute;
+    background-color: #004E1C;
+}
+#play-btn:hover{
+    display: block;
+    
+    transition: 0.2s ease-out;
+    background-color: #018a33;
+}
 
 
 
@@ -48,7 +68,7 @@ body{
     grid-column: 8/9;
     grid-row: 2/3;
     display: flex;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     margin-top: 100px;
     flex-direction: column;
     align-items: center;
@@ -71,7 +91,7 @@ body{
 #column6{
     grid-column: 7/8;
     grid-row: 2/3;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     display: flex;
     margin-top: 100px;
     flex-direction: column;
@@ -95,7 +115,7 @@ body{
 #column5{
     grid-column: 6/7;
     grid-row: 2/3;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     margin-top: 100px;
     display: flex;
     flex-direction: column;
@@ -112,7 +132,7 @@ body{
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
-    transition: 1s ease-in-out;
+    
     width:80px ;
     border-radius: 6px;
     position: relative; to .content;
@@ -121,7 +141,7 @@ body{
     grid-column: 5/6;
     margin-top: 100px;
     grid-row: 2/3;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,7 +166,7 @@ body{
     grid-row: 2/3;
     display: flex;
     margin-top: 100px;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -170,7 +190,7 @@ body{
     grid-row: 2/3;
     display: flex;
     margin-top: 100px;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     flex-direction: column;
     align-items: center;
     height: 500px;
@@ -192,7 +212,7 @@ body{
 #column1{
     grid-column: 2/3;
     grid-row: 2/3;
-    transition: 1s ease-in-out;
+    transition: margin 1s ease-in-out;
     display: flex;
     margin-top: 100px;
     flex-direction: column;
