--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Muli', sans-serif;
 }
 
 
@@ -50,7 +50,9 @@ body{
     border-radius: 7px;
     color: white;
     font-size: 25px;
-    margin:100px 0 0 400px ;
+    z-index: 10;
+    margin:141px 0 0 270px ;
+    transition: 1s ease-out;
     position: absolute;
     background-color: #004E1C;
 }
@@ -132,7 +134,6 @@ body{
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
-    
     width:80px ;
     border-radius: 6px;
     position: relative; to .content;
@@ -219,6 +220,9 @@ body{
     align-items: center;
     height: 500px;
     width: 100px;
+    background-size: 80px 100px;
+    background-repeat: no-repeat;
+    
 }
 
 #column1 .card{
@@ -239,3 +243,66 @@ body{
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94); 
     box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94);
 }
+#deck{
+    grid-column: 1/2;
+    width: 100px;
+    background-color: ;
+    height: 100px;
+    display: flex;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+#face-up-deck{
+    margin-top: 120px;
+    grid-column: 1/2;
+    width: 100px;
+    position: absolute;
+    background-color: ;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+#gameHeader{
+    background-color: ;
+    display: grid;
+    
+    position: absolute;
+    width: 860px;
+    margin-top: -80px;
+    height: 50px;
+    
+    grid-column: 2/3;
+}
+
+#gameHeader h3{
+    float:right;
+    font-size: 30px;
+    line-height: 0px;
+    font-weight: 300;
+    font-family: 'Muli', sans-serif;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+    transition: 1s ease;
+}
+#moves{
+    
+}
+
+
+.card-placeholder{
+    height: 100px;
+    width:  80px;
+    margin-top: -100px;
+    opacity: 0.2;
+    border-radius: 6px;
+    position: absolute;
+    visibility: hidden;
+
+}
+
+    /* margin-top: -30px; */
