--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@ body{
     display: grid;
     grid-template-columns: auto 900px auto;
     grid-row: 200px 400px auto;
+    transition: background-color 0.3s linear;
+    background-color: white;
+    margin: 0;
     
 }
 
@@ -311,10 +314,10 @@ body{
     width: 80px;
     position: absolute;
     margin-top: 0;
+    margin-left: 880px;
     background-size: 80px 100px;
     background-repeat: no-repeat;
     border-radius: 7px;
-    margin-left: 880px;
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94); 
     box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94);
     visibility: hidden;
@@ -366,4 +369,86 @@ body{
     background-image: url('../card_images/clubs.png');
 }
 
+#themes-controller-wrapper{
+    position: absolute;
+    grid-column: 1/10;
+    background-color: grey;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+}
     /* margin-top: -30px; */
+
+
+
+
+
+/* THEME STYLES BELOW ONLY */
+
+#h3{
+    padding:5px;
+}
+.switch {
+    margin-left:5px;
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 17px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 3px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
