--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body{
     grid-template-columns: auto 900px auto;
     grid-row: 200px 400px auto;
     transition: background-color 0.3s linear;
-    background-color: white;
+    background-color: black;
     margin: 0;
     
 }
@@ -41,10 +41,12 @@ body{
     background-repeat: no-repeat;   
     height:100px ;
     width:80px ;
+    transition: background-image 0.3s linear;
+    border: 1px solid white;
     border-radius: 6px;
     margin-top:;
     position: absolute;  
-    transition: 2s ease-in-out;
+    
 
 }
 #play-btn{
@@ -84,7 +86,7 @@ body{
 #column7 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -108,7 +110,7 @@ body{
 #column6 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -132,7 +134,7 @@ body{
 #column5 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -156,7 +158,7 @@ body{
 #column4 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -180,7 +182,7 @@ body{
 #column3 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -204,7 +206,7 @@ body{
 #column2 .card{
     z-index: 10;
     margin-top: -100px;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
@@ -230,7 +232,7 @@ body{
 
 #column1 .card{
     z-index: 10;
-    transition: margin 1s ease-in-out;
+    transition: margin 1s ease-in-out,background-image 0.3s linear;
     margin-top: -100px;
     background-image: url("../card_images/blue_back.jpg");
     background-size: 80px 100px; 
@@ -249,7 +251,7 @@ body{
 #deck{
     grid-column: 1/2;
     width: 100px;
-    background-color: ;
+    
     height: 100px;
     display: flex;
     position: absolute;
@@ -381,7 +383,9 @@ body{
 }
     /* margin-top: -30px; */
 
-
+#themes-controller-wrapper h3{
+    transition: 0.5s linear;
+}
 
 
 
@@ -456,9 +460,11 @@ body{
 
   #card-back-controller-green{
       background-image: url('../card_images/Green_back.jpg');
+      border-radius: 2px;
       background-size: 20px 25px;
       height: 25px;
       width: 20px;
+      border-radius: 3%;
       margin-left: 10px;
   }
   #card-back-controller-yellow{
@@ -466,6 +472,7 @@ body{
       background-size: 20px 25px;
       height: 25px;
       width: 20px;
+      border-radius: 3%;
       margin-left: 10px;
   }
   #card-back-controller-red{
@@ -473,12 +480,14 @@ body{
       background-size: 20px 25px;
       height: 25px;
       width: 20px;
+      border-radius: 3%;
       margin-left: 10px;
   }
   #card-back-controller-grey{
       background-image: url('../card_images/Gray_back.jpg');
       background-size: 20px 25px;
       height: 25px;
+      border-radius: 3%;
       width: 20px;
       margin-left: 10px;
   }
@@ -486,6 +495,23 @@ body{
       background-image: url('../card_images/purple_back.jpg');
       background-size: 20px 25px;
       height: 25px;
+      border-radius: 3%;
       width: 20px;
+      margin-left: 10px;
+  }
+  #card-back-controller-willow{
+      background-image: url('../card_images/willow.jpg');
+      background-size: 20px 25px;
+      height: 25px;
+      border-radius: 3%;
+      width: 20px;
+      margin-left: 10px;
+  }
+  #card-back-controller-lyra{
+      background-image: url('../card_images/lyra.jpg');
+      background-size: 20px 25px;
+      height: 25px;
+      width: 20px;
+      border-radius: 3%;
       margin-left: 10px;
   }
