--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ body{
     font-size: 25px;
     z-index: 10;
     margin:141px 0 0 270px ;
-    transition: 1s ease-out;
+    
     position: absolute;
     background-color: #004E1C;
 }
@@ -380,6 +380,7 @@ body{
     align-items: center;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
     /* margin-top: -30px; */
 
@@ -404,7 +405,7 @@ body{
   
   /* Hide default HTML checkbox */
   .switch input {
-    opacity: 0;
+    opacity: 0;evt.target.removeEventListener('click')
     width: 0;
     height: 0;
   }
