--- a/css/main.css
+++ b/css/main.css
@@ -587,3 +587,9 @@ body{
       border-radius: 20%;
       background-image: url('../bg_images/cones-bg.jpg');
   }
+  #winner{
+      position: absolute;
+      margin-top: 700px;
+      font-size: 60px;
+      margin-left: 38%;
+  }
