--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body{
     grid-column: 2/3;
     padding: 20px;
     border-radius: 20px;
-    background-image: url('../boardbg.jpg');
+    background-image: url('../bg_images/red-bg.jpg');
     /* background-color: green; */
     -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94); 
     box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.94);
@@ -39,7 +39,7 @@ body{
 #gameBoard .card{
     z-index: 10;
     transition: margin 1s ease-in-out;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -62,7 +62,7 @@ body{
     margin:141px 0 0 40% ;
     
     position: absolute;
-    background-color: #004E1C;
+    background-color: black;
 }
 #replay-btn{
     height: 50px;
@@ -74,13 +74,13 @@ body{
     margin:141px 0 0 50% ;
     visibility: hidden;
     position: absolute;
-    background-color: #004E1C;
+    background-color: black;
 }
 #play-btn:hover{
     display: block;
     
-    transition: 0.2s ease-out;
-    background-color: #018a33;
+    
+    background-color: black;
 }
 
 
@@ -102,7 +102,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -126,7 +126,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -150,7 +150,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -174,7 +174,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -198,7 +198,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -222,7 +222,7 @@ body{
     z-index: 10;
     margin-top: -100px;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -249,7 +249,7 @@ body{
     z-index: 10;
     transition: margin 1s ease-in-out,background-image 0.3s linear;
     margin-top: -100px;
-    background-image: url("../card_images/blue_back.jpg");
+    background-image: url("../card_images/Red_back.jpg");
     background-size: 80px 100px; 
     background-repeat: no-repeat;   
     height:100px ;
@@ -591,6 +591,7 @@ body{
       position: absolute;
       margin-top: 700px;
       font-size: 60px;
+      color:white;
       margin-left: 38%;
   }
  
